--- a/web/index.html
+++ b/web/index.html
@@ -30,6 +30,7 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
+
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
@@ -41,5 +42,29 @@
     }
   </script>
   <script src="main.dart.js" type="application/javascript"></script>
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-app.js"></script>
+
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+       https://firebase.google.com/docs/web/setup#available-libraries -->
+  <script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-analytics.js"></script>
+
+  <script>
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    var firebaseConfig = {
+      apiKey: "AIzaSyBVVtXSBZesVyszM7kgVHZ_80iVHzdYlHg",
+      authDomain: "amcham-app.firebaseapp.com",
+      databaseURL: "https://amcham-app-default-rtdb.europe-west1.firebasedatabase.app",
+      projectId: "amcham-app",
+      storageBucket: "amcham-app.appspot.com",
+      messagingSenderId: "609937874521",
+      appId: "1:609937874521:web:f10d0047aea1d569b05b48",
+      measurementId: "G-QHWJ3N55XC"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    firebase.analytics();
+  </script>
 </body>
 </html>
